[DTR-1421] Some cleanup

--- a/app/views/testonly/TestOnlyAmendRegularPaymentAmountView.scala.html
+++ b/app/views/testonly/TestOnlyAmendRegularPaymentAmountView.scala.html
@@ -38,7 +38,7 @@
       InputViewModel(
         field = form("value"),
         label = LabelViewModel(messages("regularPaymentAmount.heading"))
-          .asPageHeading().withCssClass("govuk-fieldset__legend--xl"),
+          .asPageHeading(),
       )
       .withPrefix(PrefixOrSuffix(content = "£"))
       .withWidth(Fixed10)
