DTR-861: Date Validation and test case fixes

--- a/app/views/YearEndAndMonthView.scala.html
+++ b/app/views/YearEndAndMonthView.scala.html
@@ -60,7 +60,7 @@
 
         @govukInput(
             InputViewModel(
-                field = form("value.month"),
+                field = form("value"),
                 label = LabelViewModel(messages("yearEndAndMonth.heading2")).withCssClass("govuk-label--m")
             )
             .withWidth(Fixed4)
