DTR-861: limiting to 4 digits

--- a/app/views/YearEndAndMonthView.scala.html
+++ b/app/views/YearEndAndMonthView.scala.html
@@ -66,6 +66,9 @@
             .withWidth(Fixed4)
             .withHint(Hint(content = Text(messages("yearEndAndMonth.hint"))))
             .asNumeric()
+            .withAttribute("maxlength", "4")
+            .withAttribute("pattern", "[0-9]*")
+            .withAttribute("inputmode", "numeric")
         )
 
         @govukButton(
