--- a/app/views/ConfirmRemovePlanEndDateView.scala.html
+++ b/app/views/ConfirmRemovePlanEndDateView.scala.html
@@ -26,7 +26,7 @@
     header1: Header1,
 )
 
-@(form: Form[_], mode: Mode, paymentPlanReference: String, planEndDate: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, paymentPlanReference: String, planEndDate: String, call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("confirmRemovePlanEndDate.title"))) {
 
