DTR-1429: Text variations for Single and Budget plan

--- a/app/views/testonly/TestOnlyAmendPaymentPlanUpdateView.scala.html
+++ b/app/views/testonly/TestOnlyAmendPaymentPlanUpdateView.scala.html
@@ -29,7 +29,7 @@
         paragraphWithLink: ParagraphMessageWithLink
 )
 
-@(hmrcHelplineUrl: String, paymentAmount: String, startDate: String, directDebitReference: String, bankAccountName: String, accountNumber: String, sortCode: String, paymentList: SummaryList, call: Call)(implicit request: Request[_], messages: Messages)
+@(hmrcHelplineUrl: String, paymentAmount: String, startDate: String, directDebitReference: String, bankAccountName: String, accountNumber: String, sortCode: String, paymentList: SummaryList, planType: String, call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("amendPaymentPlanUpdate.title")), showBackLink = false) {
 
@@ -39,7 +39,13 @@
 
     @h2("amendPaymentPlanUpdate.h1")
 
-    @paragraph(messages("testOnlyAmendPaymentPlanUpdate.p1", paymentAmount, startDate))
+    @if(planType == PaymentPlanType.SinglePaymentPlan.toString) {
+        @paragraph(messages("testOnlyAmendPaymentPlanUpdate.SinglePlan.p1", paymentAmount, startDate))
+    } else {
+        @paragraph(messages("testOnlyAmendPaymentPlanUpdate.BudgetPlan.p1", paymentAmount, startDate))
+    }
+
+@paragraph(messages("testOnlyAmendPaymentPlanUpdate.p1", paymentAmount, startDate))
     @paragraph(messages("testOnlyAmendPaymentPlanUpdate.p2"))
 
     @paragraphWithLink(
