--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,9 +22,14 @@
 }
 
 @media (min-width: 40.0625em) {
-.govuk-summary-list__key {
-    width: 35%;
- }
+  .govuk-summary-list{
+    &__key {
+      width: 35%;
+    }
+    &__actions {
+      width: auto;
+    }
+  }
 }
 
 .govuk-summary-list__row {
@@ -50,4 +55,3 @@
 .govuk-hint-black {
   color: #0b0c0c;
 }
-
