--- a/app/views/testonly/TestOnlyAmendRegularPaymentAmountView.scala.html
+++ b/app/views/testonly/TestOnlyAmendRegularPaymentAmountView.scala.html
@@ -26,7 +26,7 @@
 
 @(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("regularPaymentAmount.title")), backLink = Some(call.url)) {
+@layout(pageTitle = title(form, messages("testOnlyAmendRegularPaymentAmount.title")), backLink = Some(call.url)) {
 
   @formHelper(action = controllers.testonly.routes.TestOnlyAmendRegularPaymentAmountController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
@@ -37,12 +37,12 @@
     @govukInput(
       InputViewModel(
         field = form("value"),
-        label = LabelViewModel(messages("regularPaymentAmount.heading"))
+        label = LabelViewModel(messages("testOnlyAmendRegularPaymentAmount.heading"))
           .asPageHeading(),
       )
       .withPrefix(PrefixOrSuffix(content = "£"))
       .withWidth(Fixed10)
-      .withHint(HintViewModel(messages("regularPaymentAmount.hint")))
+      .withHint(HintViewModel(messages("testOnlyAmendRegularPaymentAmount.hint")))
     )
 
     @govukButton(
