--- a/app/views/YearEndAndMonthView.scala.html
+++ b/app/views/YearEndAndMonthView.scala.html
@@ -16,6 +16,7 @@
 
 @import viewmodels.InputWidth.*
 @import views.html.components.*
+@import config.FrontendAppConfig
 
 @this(
     layout: templates.Layout,
@@ -28,75 +29,47 @@
     govukFieldset: GovukFieldset,
     header1: Header1,
     paragraph: Paragraph,
-    bulletList: BulletList
+    bulletList: BulletList,
+    govukErrorSummary: GovukErrorSummary,
+    govukLabel: GovukLabel,
+    govukHint: GovukHint
 )
 
-@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
-
-@html = {
-
-    @govukWarningText(WarningText(content = Text(messages("yearEndAndMonth.warning"))))
-    @paragraph("yearEndAndMonth.p1")
-
-    @govukInput(
-        InputViewModel(
-            field = form("value.year"),
-            label = LabelViewModel(messages("yearEndAndMonth.deductionYearEnd")).withCssClass("govuk-label--m")
-        )
-        .withWidth(Fixed4)
-        .withHint(Hint(content = Text(messages("yearEndAndMonth.deductionYearEnd.hint"))))
-        .asNumeric()
-    )
-
-    @govukInput(
-        InputViewModel(
-            field = form("value.month"),
-            label = LabelViewModel(messages("yearEndAndMonth.monthOrQuarter")).withCssClass("govuk-label--m")
-        )
-        .withWidth(Fixed2)
-        .withHint(Hint(content = Text(messages("yearEndAndMonth.monthOrQuarter.hint"))))
-        .asNumeric()
-    )
-
-    @defining(HtmlFormat.fill(Seq(
-
-        paragraph("yearEndAndMonth.collapsable.examples.p1", true),
-        bulletList(
-        items = Seq(
-            "yearEndAndMonth.collapsable.examples.b1",
-            "yearEndAndMonth.collapsable.examples.b2",
-            "yearEndAndMonth.collapsable.examples.b3"
-        )
-        ),
-        paragraph("yearEndAndMonth.collapsable.monthCodes.p1", true),
-        paragraph("yearEndAndMonth.collapsable.monthCodes.p2"),
-        paragraph("yearEndAndMonth.collapsable.quarterCodes.p1"),
-
-    ))) { content =>
-
-        @govukDetails(
-            Details(
-                summary = messages("yearEndAndMonth.collapsable"),
-                content = HtmlContent(content)
-            )
-        )
-    }
-}
-
+@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_],appConfig: FrontendAppConfig, messages: Messages)
 @layout(pageTitle = title(form, messages("yearEndAndMonth.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.YearEndAndMonthController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @mainErrorSummary(form)
+        @if(form.errors.nonEmpty) {
+            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value")))
+        }
 
-        @govukFieldset(Fieldset(
-            legend = Some(Legend(
-                content = Text(messages("yearEndAndMonth.heading")),
-                classes = "govuk-fieldset__legend--xl",
-                isPageHeading = true
-            )),
-            html = html
-        ))
+        @govukLabel(HmrcPageHeadingLabel.apply(
+            content = Text(messages("yearEndAndMonth.heading"))
+        ).withCssClass("govuk-!-margin-bottom-0"))
+
+        @paragraph("yearEndAndMonth.p1")
+
+        @paragraph("yearEndAndMonth.p2")
+
+        <ul class="govuk-list govuk-list--bullet">
+            <li><a href="@appConfig.payMonthlyUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link1")</a>, @messages("yearEndAndMonth.bullet.text1")</li>
+            <li><a href="@appConfig.payQuarterlyUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link2")</a>, @messages("yearEndAndMonth.bullet.text2")</li>
+            <li><a href= "@appConfig.p11DPaymentUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link3")</a>, @messages("yearEndAndMonth.bullet.text3")</li>
+        </ul>
+
+        @govukInput(
+            InputViewModel(
+                field = form("value"),
+                label = LabelViewModel(messages("yearEndAndMonth.heading2")).withCssClass("govuk-label--m")
+            )
+            .withWidth(Fixed4)
+            .withHint(Hint(content = Text(messages("yearEndAndMonth.hint"))))
+            .asNumeric()
+            .withAttribute("maxlength", "4")
+            .withAttribute("pattern", "[0-9]{4}")
+            .withAttribute("inputmode", "numeric")
+        )
 
         @govukButton(
             ButtonViewModel(messages("site.continue"))
