--- a/app/views/testonly/TestOnlyAmendPaymentPlanConfirmationView.scala.html
+++ b/app/views/testonly/TestOnlyAmendPaymentPlanConfirmationView.scala.html
@@ -27,7 +27,7 @@
 
 @(mode: Mode, rows: Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("testOnlyAmendPaymentPlanConfirmation.title"))) {
+@layout(pageTitle = titleNoForm(messages("testOnlyAmendPaymentPlanConfirmation.title")), showBackLink = false) {
     @formHelper(action = controllers.testonly.routes.TestOnlyAmendPaymentPlanConfirmationController.onSubmit(), Symbol("autoComplete") -> "off") {
         @header1("testOnlyAmendPaymentPlanConfirmation.heading")
 
