DTR-1845-fix: update added (opens in a new tab) where appropriate

--- a/app/views/AdvanceNoticeView.scala.html
+++ b/app/views/AdvanceNoticeView.scala.html
@@ -39,6 +39,7 @@
         message1 = Some(messages("advanceNotice.p2")),
         linkMessage = messages("advanceNotice.p2.link"),
         linkUrl = hmrcHelplineUrl,
+        linkFullStop = true,
         linkRel = "noreferrer noopener",
         target = "_blank"
     )
