--- a/app/views/AmendDuplicateWarningView.scala.html
+++ b/app/views/AmendDuplicateWarningView.scala.html
@@ -28,11 +28,11 @@
         govukLabel: GovukLabel
 )
 
-@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("amendDuplicateWarning.title")), backLink = Some(call.url)) {
+@layout(pageTitle = title(form, messages("amendDuplicateWarning.title")), showBackLink = false) {
 
-@formHelper(action = routes.DuplicateWarningController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+@formHelper(action = routes.AmendDuplicateWarningController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
