--- a/app/views/AmendPlanStartDateView.scala.html
+++ b/app/views/AmendPlanStartDateView.scala.html
@@ -24,8 +24,7 @@
     govukWarningText: GovukWarningText,
     govukButton: GovukButton,
     h1: Header1,
-    p: Paragraph,
-    mainErrorSummary: MainErrorSummary
+    p: Paragraph
 )
 
 @(form: Form[_], mode: Mode, earliestPlanStartDate: String, call: Call)(implicit request: Request[_], messages: Messages)
@@ -34,7 +33,9 @@
 
     @formHelper(action = routes.AmendPlanStartDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @mainErrorSummary(form)
+        @if(form.errors.nonEmpty) {
+            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value")))
+        }
 
         @govukDateInput(
             DateViewModel(
@@ -42,7 +43,7 @@
                 legend = LegendViewModel(content="amendPlanStartDate.heading").asPageHeading()
             ).withHint(HintViewModel(HtmlContent(Seq
                     (
-                      s"<p class='govuk-!-margin-top-7 govuk-hint-black'>${messages("amendPlanStartDate.p1")}</p>",
+                      s"<p class='govuk-!-margin-top-0 govuk-hint-black'>${messages("amendPlanStartDate.p1")}</p>",
                       govukWarningText(
                         WarningText(content = HtmlContent(messages("amendPlanStartDate.warning")))
                       ),
