--- a/app/views/ErrorWarningView.scala.html
+++ b/app/views/ErrorWarningView.scala.html
@@ -27,7 +27,7 @@
 
 @()(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("errorWarning.title"))) {
+@layout(pageTitle = titleNoForm(messages("errorWarning.title")), showBackLink = false, showSignOut = false) {
 
     @h1("errorWarning.heading")
 
