--- a/app/views/DuplicateWarningForAddOrCreatePPView.scala.html
+++ b/app/views/DuplicateWarningForAddOrCreatePPView.scala.html
@@ -30,7 +30,7 @@
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("duplicateWarningForAddOrCreatePP.title"))) {
+@layout(pageTitle = title(form, messages("duplicateWarningForAddOrCreatePP.title")), showBackLink = false) {
 
     @formHelper(action = routes.DuplicateWarningForAddOrCreatePPController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
