--- a/app/views/SetupDirectDebitPaymentView.scala.html
+++ b/app/views/SetupDirectDebitPaymentView.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import _root_.models.NormalMode
-@import views.html.components._
+@import views.html.components.*
 @import views.helpers.DirectDebitCountBackLink
 
 @this(
