--- a/app/views/YearEndAndMonthView.scala.html
+++ b/app/views/YearEndAndMonthView.scala.html
@@ -35,7 +35,7 @@
     govukHint: GovukHint
 )
 
-@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_],appConfig: FrontendAppConfig, messages: Messages)
+@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], appConfig: FrontendAppConfig, messages: Messages)
 @layout(pageTitle = title(form, messages("yearEndAndMonth.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.YearEndAndMonthController.onSubmit(mode), Symbol("autoComplete") -> "off") {
@@ -53,9 +53,9 @@
         @paragraph("yearEndAndMonth.p2")
 
         <ul class="govuk-list govuk-list--bullet">
-            <li><a href="@appConfig.payMonthlyUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link1")</a>, @messages("yearEndAndMonth.bullet.text1")</li>
-            <li><a href="@appConfig.payQuarterlyUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link2")</a>, @messages("yearEndAndMonth.bullet.text2")</li>
-            <li><a href= "@appConfig.p11DPaymentUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link3")</a>, @messages("yearEndAndMonth.bullet.text3")</li>
+            <li><a href="@appConfig.payMonthlyUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link1")<span class="govuk-visually-hidden">(opens in new tab)</span></a>, @messages("yearEndAndMonth.bullet.text1")</li>
+            <li><a href="@appConfig.payQuarterlyUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link2")<span class="govuk-visually-hidden">(opens in new tab)</span></a>, @messages("yearEndAndMonth.bullet.text2")</li>
+            <li><a href="@appConfig.p11DPaymentUrl" target="_blank" rel="noopener">@messages("yearEndAndMonth.bullet.link3")<span class="govuk-visually-hidden">(opens in new tab)</span></a>, @messages("yearEndAndMonth.bullet.text3")</li>
         </ul>
 
         @govukInput(
