--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -14,6 +14,7 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.hmrcfrontend.views.html.helpers.HmrcTrackingConsentSnippet
 @import config.FrontendAppConfig
 @import uk.gov.hmrc.hmrcfrontend.views.config.StandardBetaBanner
 @import uk.gov.hmrc.hmrcfrontend.views.html.helpers._
@@ -33,7 +34,8 @@
     hmrcStandardPage: HmrcStandardPage,
     govukBackLink: GovukBackLink,
     threeQuartersMainContent: ThreeQuartersMainContent,
-    twoThirdsMainContent: TwoThirdsMainContent
+    twoThirdsMainContent: TwoThirdsMainContent,
+    hmrcTrackingConsentSnippet: HmrcTrackingConsentSnippet
 )
 
 @(pageTitle: String, showBackLink: Boolean = true, timeout: Boolean = true, showSignOut: Boolean = true, showHmrcBanner: Boolean = false, backLink: Option[String] = None, templateOverrides: TemplateOverrides = TemplateOverrides(), useThreeQuartersGrid: Boolean = false)(contentBlock: Html)(implicit rh: RequestHeader, messages: Messages)
@@ -57,6 +59,7 @@
 
 @content = {
     @contentBlock
+    @hmrcTrackingConsentSnippet()
     <div class="govuk-!-margin-top-3">
         @hmrcReportTechnicalIssueHelper()
     </div>
