--- a/app/views/components/MainErrorSummary.scala.html
+++ b/app/views/components/MainErrorSummary.scala.html
@@ -23,20 +23,20 @@
 
 @this(govukErrorSummary: GovukErrorSummary)
 
-@(form: Form[_])(implicit messages: Messages)
+@(form: Form[_], errorLinkOverrides: Map[String, String] = Map.empty)(implicit messages: Messages)
 
 @form.errors.headOption.map { error =>
     @govukErrorSummary(
         ErrorSummary(
             title = Text(messages("error.summary.title")),
             errorList = Seq(
-                ErrorLink(
-                    href = error.key match {
-                        case "" => None
-                        case key => Some(s"#$key")
-                    },
-                    content = Text(messages(error.message, error.args: _*))
-                )
+                            ErrorLink(
+                                href = error.key match {
+                                    case "" => None
+                                    case key => Some(s"#${errorLinkOverrides.getOrElse(key, key)}")
+                                },
+                                content = Text(messages(error.message, error.args: _*))
+                            )
             )
         )
     )
