DTR-2051: Fix for Ap1c, T13,T14 and T18 error component

--- a/app/views/AmendPlanEndDateView.scala.html
+++ b/app/views/AmendPlanEndDateView.scala.html
@@ -33,7 +33,7 @@
 
     @formHelper(action = routes.AmendPlanEndDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @mainErrorSummary(form)
+        @mainErrorSummary(form, errorLinkOverrides = Map("value" -> "value.day"))
 
         @govukLabel(HmrcPageHeadingLabel.apply(
             content = Text(messages("amendPlanEndDate.heading"))
