DTR-2051: minor fix

--- a/app/views/PlanStartDateView.scala.html
+++ b/app/views/PlanStartDateView.scala.html
@@ -20,7 +20,7 @@
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
-    mainErrorSummary: components.MainErrorSummary,
+    mainErrorSummary: MainErrorSummary,
     govukDateInput: GovukDateInput,
     govukButton: GovukButton,
     govukDetails: GovukDetails,
