--- a/app/views/PlanEndDateView.scala.html
+++ b/app/views/PlanEndDateView.scala.html
@@ -14,10 +14,12 @@
  * limitations under the License.
  *@
 
+@import views.html.components.*
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
+    mainErrorSummary: MainErrorSummary,
     govukDateInput: GovukDateInput,
     govukButton: GovukButton
 )
